--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,12 @@
   background-color: rgb(235,235,235);
 }
 
+h2 {
+  text-align: center;
+  margin-top: 45px;
+  margin-bottom: 15px;
+}
+
 .light .app-header {
   background-color: rgb(250,250,250);
 }
@@ -17,6 +23,10 @@
 }
 
 .light .input {
+  color: white;
+}
+
+.dark .input {
   color: white;
 }
 
