--- a/src/components/Weather.css
+++ b/src/components/Weather.css
@@ -6,7 +6,7 @@
   display: block;
   margin: auto;
   
-  margin-top: 45px;
+  margin-top: 0;
   box-shadow: 2px 3px 3px rgba(0, 0, 0, 0.7);
   margin-bottom: 20px;
   
